flux/namespaced/upstream/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: sys-flux
    app.kubernetes.io/part-of: flux
    control-plane: controller
  name: notification-controller
  namespace: sys-flux
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: notification-controller
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: sys-flux
    app.kubernetes.io/part-of: flux
    control-plane: controller
  name: source-controller
  namespace: sys-flux
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: source-controller
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: sys-flux
    app.kubernetes.io/part-of: flux
    control-plane: controller
  name: webhook-receiver
  namespace: sys-flux
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http-webhook
  selector:
    app: notification-controller
  type: ClusterIP
